--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -42,4 +42,13 @@
 
 </body>
 
+<footer>
+	<table>
+		<tr>
+			<td><a href="https://github.com/Axelisys/policies">View on GitHub</a></td>
+			<td><a href="https://www.axelisys.co.uk/" class="btn">About Us</a></td>
+		</tr>
+	</table>
+</footer>
+	
 </html>
