--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,7 +24,7 @@
   <body style="">
     <section class="page-header">
       <h1 class="project-name">{{ page.title }}</h1>
-      <h2 class="project-tagline">Part of our OpenPolicies series. Just use and reuse</h2>
+      <h2 class="project-tagline">Part of our OpenPolicies series. Just fork and reuse</h2>
       
         <a href="https://github.com/Axelisys/policies" class="btn">View on GitHub</a>
       
