--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#157878">
-		<link rel="stylesheet" href="https://axelisys.github.io/policies/_layouts/css/style.css">
+		<link rel="stylesheet" href="https://axelisys.github.io/policies/css/style.css">
   </head>
   <body style="">
     <section class="page-header">
